--- a/src/main/resources/styles/customerHeader.scss
+++ b/src/main/resources/styles/customerHeader.scss
@@ -176,3 +176,11 @@ a {
     line-height: 30px;
     text-align: center;
 }
+
+#footer{
+    width: 100%;
+    background-color: #2A324B;
+    height: 80px;
+    clear:both;
+    
+}
