--- a/src/main/resources/styles/login.scss
+++ b/src/main/resources/styles/login.scss
@@ -79,7 +79,7 @@
     display: inline-block;
 }
 
-#login .label {
+.loginPage .label {
     position: absolute;
     margin: 2px -3px;
     height: 38px;
