--- a/src/main/resources/styles/investorModel.scss
+++ b/src/main/resources/styles/investorModel.scss
@@ -1,4 +1,9 @@
 #content-iModel {
+  margin: 0 auto;
+  width: 820px;
+  
+}
+#content-iModel {
     #mainContainer {
         margin: auto;
         margin-top: 30px;
