--- a/src/main/resources/styles/investor/investor.scss
+++ b/src/main/resources/styles/investor/investor.scss
@@ -3,3 +3,5 @@
 @import 'components/investmentHall';
 @import 'components/investorModel';
 @import 'components/releaseTenderOffers';
+@import 'components/reset';
+@import 'components/informationIssue';
