--- a/src/main/resources/stylesheets/reset.css
+++ b/src/main/resources/stylesheets/reset.css
@@ -1,46 +1,46 @@
-@charset "utf-8";
-body, ul, ol, li, p, h1, h2, h3, h4, h5, h6, form, fieldset, table, td,
-	img, div, dl, dt, dd, input {
-	margin: 0;
+* {
+    margin: 0;
 }
 
 img {
-	border: none;
+    border: none;
 }
 
 li {
-	list-style: none;
+    list-style: none;
 }
 
-input, select, textarea {
-	outline: none;
-	border: none;
-	background: none;
+input,
+select,
+textarea {
+    outline: none;
+    border: none;
+    background: none;
 }
 
 textarea {
-	resize: none;
+    resize: none;
 }
 
 a {
-	text-decoration: none;
-	color: #FFF;
+    text-decoration: none;
+    color: #FFF;
 }
 
 .clearfix:after {
-	content: "";
-	display: block;
-	clear: both;
+    content: "";
+    display: block;
+    clear: both;
 }
 
 .clearfix {
-	zoom: 1;
+    zoom: 1;
 }
 
 .fl {
-	float: left;
+    float: left;
 }
 
 .fr {
-	float: right;
+    float: right;
 }
