investor manage scss

--- a/src/main/resources/styles/investor/investor.scss
+++ b/src/main/resources/styles/investor/investor.scss
@@ -5,3 +5,4 @@
 @import 'components/releaseTenderOffers';
 @import 'components/reset';
 @import 'components/informationIssue';
+@import 'components/socketManage';
