--- a/src/main/resources/styles/investor/investor.scss
+++ b/src/main/resources/styles/investor/investor.scss
@@ -6,3 +6,4 @@
 @import 'components/reset';
 @import 'components/informationIssue';
 @import 'components/socketManage';
+@import 'components/ifollow';
