--- a/src/main/resources/styles/investor/investor.scss
+++ b/src/main/resources/styles/investor/investor.scss
@@ -7,3 +7,5 @@
 @import 'components/informationIssue';
 @import 'components/socketManage';
 @import 'components/ifollow';
+@import 'components/inews';
+@import 'components/assetsmanage';
