import company scss

--- a/src/main/resources/styles/main.scss
+++ b/src/main/resources/styles/main.scss
@@ -1,4 +1,5 @@
 @import 'common/common';
 @import 'customer/customer';
 @import 'investor/investor';
+@import 'company/company';
 @import 'font/font';
