--- a/src/main/resources/styles/common/components/base.scss
+++ b/src/main/resources/styles/common/components/base.scss
@@ -12,11 +12,49 @@ ul {
 }
 
 a {
-    text-decoration: none
+    text-decoration: none;
+    outline: none
 }
 
 #main {
- 	width: 100%;
- 	height: 100%;
- 	font-size: 1em;
+    font-size: 1em;
+    flex: 1;
+}
+
+#mainPage > div {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+}
+
+#content {
+    margin: 0 auto;
+    width: 840px;
+    overflow: hidden;
+}
+
+input[type="search"] {
+    box-sizing: border-box;
+    width: 200px;
+    height: 26px;
+    border: 1px solid #767B91;
+    outline: none;
+    padding: 1px 3px;
+    border-radius: 6px 0 0 6px;
+}
+
+input[type="search"]:focus {
+    box-shadow: 0 0 5px #88E4FF;
+    border: 1px solid #88E4FF;
+}
+
+#searchForm input[type="submit"] {
+    box-sizing: border-box;
+    height: 26px;
+    width: 80px;
+    border-radius: 0;
+}
+
+table {
+  border-collapse: collapse;
 }
