--- a/src/main/resources/styles/customer/components/reg.scss
+++ b/src/main/resources/styles/customer/components/reg.scss
@@ -1,34 +1,28 @@
-
-#content {
-	width: 820px;
-	margin: 0 auto;
-}
-
-#sitenav {
+#reg--sitenav {
 	height: 30px;
 	margin-top: 30px;
 	width: 100%;
 }
 
-#sitenav {
+#reg--sitenav {
 	border-bottom: 1px solid #E5E5E5;
 	overfolw:hidden;
 }
 
-#sitenav ul {
+#reg--sitenav ul {
 	height: 100%;
 	margin-top: -2px;
 	list-style: none;
 }
 
-#sitenav ul li {
+#reg--sitenav ul li {
 	width: 33.3%;
 	float: left;
 	position: relative;
 	height: 30px;
 }
 
-#sitenav li > span {
+#reg--sitenav li > span {
 	display: inline-block;
 	position: absolute;
 	height: 30px;
@@ -42,7 +36,7 @@
 	border-bottom: 2px solid #2A324B;
 }
 
-#sitenav li span img {
+#reg--sitenav li span img {
 	width: 1.5em;
 	vertical-align: middle;
 }
