--- a/src/main/resources/styles/common/components/base.scss
+++ b/src/main/resources/styles/common/components/base.scss
@@ -30,7 +30,7 @@ a {
 #content {
     margin: 0 auto;
     width: 840px;
-    overflow: hidden;
+    min-height: 100%;
 }
 
 input[type="search"] {
@@ -53,6 +53,7 @@ input[type="search"]:focus {
     height: 26px;
     width: 80px;
     border-radius: 0;
+    vertical-align: top;
 }
 
 table {
