--- a/src/main/resources/styles/customer/components/login.scss
+++ b/src/main/resources/styles/customer/components/login.scss
@@ -1,24 +1,15 @@
 .loginPage {
-    #first-glance {
-        top: 80px;
+    .first-glance {
+        top: 20px;
         height: 320px;
+        float: left;
+        width: 48%;
     }
+
     #first-glance ul {
-        margin: 10px -40px;
+        margin: 10px 0;
     }
-    #first-glance ul,
-    #first-glance ul li,
-    #main {
-        width: 100%;
-        height: 100%;
-    }
-    .banner {
-        position: relative;
-        overflow: hidden;
-    }
-    .banner li {
-        list-style: none;
-    }
+
     .banner a {
         z-index: 100;
         position: absolute;
@@ -43,21 +34,19 @@
 #login {
     border: 1px solid #DEDFE1;
     border-radius: 3px;
-    position: absolute;
+    position:relative;
+    float: right;
     width: 400px;
     height: 310px;
-    top: 90px;
-    left: 420px;
+    top: 40px;
 }
 
 #login ul {
     margin-top: 10px;
-    list-style: none;
 }
 
 #login ul li {
     position: relative;
-    margin-left: -20px;
     height: 50px;
 }
 
@@ -74,16 +63,12 @@
     text-align: center;
     line-height: 38px;
     width: 60px;
-    margin: 0;
-    padding: 0;
     color: white;
     background: #45578F;
 }
 
 .input-text {
     position: absolute;
-    padding: 0;
-    margin: 0;
     left: 60px;
     height: 35px;
     width: 260px;
@@ -100,7 +85,6 @@
 }
 
 #auth-tips {
-    padding: 0;
     margin-top: 2px;
     height: 35px;
     text-align: left;
