--- a/src/main/resources/styles/customer/components/customerIndex.scss
+++ b/src/main/resources/styles/customer/components/customerIndex.scss
@@ -48,21 +48,22 @@
 #data-show {
     margin-top: 10px;
     overflow: hidden;
+    position:relative;
 }
 
 #reg-num,
-#rise-speed,
 #circle {
     float: left;
 }
 
 #reg-num {
-    width: 25%;
+  width: 25%;
 }
 
 #rise-speed {
-    width: 38%;
-    margin-left: 5px;
+  float: left;
+  clear: float;
+  padding-left:30px;
 }
 
 #rise-speed > div {
@@ -76,7 +77,6 @@
 .line-list,
 #invest-list,
 #news-area ul {
-    list-style: none;
     overflow: hidden;
 }
 
@@ -119,8 +119,18 @@
 }
 
 .line-list li {
-    width: 33.3%;
+    width: 90px;
     position: relative;
+}
+
+.line-list li p {
+    text-align: center;
+}
+
+.data-image {
+   width: 75px;
+   padding: 3px 0;
+   margin:0 auto;
 }
 
 .speed {
@@ -218,8 +228,8 @@
 }
 
 #circle {
-    margin-top: 10px;
     overflow: hidden;
+    float: right;
 }
 
 #circle div {
@@ -234,13 +244,6 @@
 #circle-data ul span {
     font-size: 0.6em;
     color: #767576;
-}
-
-#circle-data ul span:nth-child(1) {
-    display: inline-block;
-    width: 10px;
-    height: 10px;
-    border-radius: 5px;
 }
 
 #circle-data ul li {
@@ -300,11 +303,22 @@
 }
 
 .svg-circle-g {
-  transform: translate(70px, 70px);
+    transform: translate(70px, 70px);
 }
 
 .svg-text {
     transform: translate(60px, 150px);
     color: #767576;
-   font-size : 0.7em
+    font-size: 0.7em;
+}
+
+.circle--data--tips {
+    display: inline-block;
+    border-radius: 5px;
+    width: 10px;
+    height: 10px;
+}
+
+.circlie--data-tips--tilte {
+  padding-left:5px;
 }
